<resources>
    <string name="app_name">Notify</string>
    <string name="listenButton">Listen</string>
    <string name="stopButton">Stop</string>
    <string name="enter_minimum_level">Enter Minimum Level</string>
    <string name="back">back</string>
    <string name="save">save</string>
    <string name="callibrate">Callibrate</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="new_to_tutlane_register_here">New to Notify? Register here</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="logout">logout</string>
    <string name="logout1">Logout</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="stop">Stop</string>
    <string name="listen">Listen</string>
    <string name="current_threshold_value">Current Threshold Value:</string>
    <string name="current_thresh">Current Thresh</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="todo">TODO</string>
    <string name="todo3">TODO</string>
</resources>
