<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/listenButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="71dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="92dp"
        android:background="@drawable/custom_button1"
        android:onClick="listenButton"
        android:text="@string/listen"
        android:textColor="#3700B3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/stopButton" />

    <TextView
        android:id="@+id/dbText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:layout_marginEnd="206dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="448dp"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="71dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/custom_button1"
        android:onClick="stopButton"
        android:text="@string/stop"
        android:textColor="#3700B3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="412dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/custom_button1"
        android:text="Settings"
        android:textColor="#3700B3"
        app:layout_constraintBottom_toTopOf="@+id/listenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/callibrateButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/callibrateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="352dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/custom_button1"
        android:text="@string/callibrate"
        android:textColor="#3700B3"
        app:layout_constraintBottom_toTopOf="@+id/stopButton"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/callibrate" />


</android.support.constraint.ConstraintLayout>